docs/semantic-ontology/linkml/tests/valid/claim-claim-stripped-0.jsonld
{
  "@context": {
    "@vocab": "https://w3id.org/facis/dcs/ontology/v1#",
    "dcs": "https://w3id.org/facis/dcs/ontology/v1#",
    "xsd": "http://www.w3.org/2001/XMLSchema#"
  },
  "@id": "urn:doc:claim-stripped",
  "@type": "ContractTemplate",
  "documentTitle": "Claim Test Document",
  "metadata": {
    "@type": "TemplateMetadata",
    "title": "Claim Test Document"
  },
  "documentStructure": {
    "@type": "DocumentStructure",
    "layout": [
      {
        "@type": "LayoutNode",
        "isRoot": true,
        "children": [
          "urn:doc:claim-stripped#s1"
        ]
      },
      {
        "@type": "LayoutNode",
        "@id": "urn:doc:claim-stripped#s1",
        "children": [
          "urn:doc:claim-stripped#c1"
        ]
      }
    ],
    "blocks": [
      {
        "@type": "Section",
        "@id": "urn:doc:claim-stripped#s1",
        "title": "1. Terms"
      },
      {
        "@type": "Clause",
        "@id": "urn:doc:claim-stripped#c1",
        "content": [
          "This clause was rendered deterministically and its origin is being claimed."
        ]
      }
    ]
  }
}